--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -38,7 +38,7 @@ A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial r
 
 ## Unresolved Problems and Major Uncertainties
 
-Main life history parameters, such as natural mortality and stock-recruit curve steepness, generally contribute significant uncertainty to stock assessments. These values were fixed in this assessment, as they were in the benchmark assessment because the benchmark model was unable to reliably estimate these quantities [@gertseva_stock_2017]. These quantities are essential for understanding the dynamics of the stock and determining projected rebuilding. Alternative values of these parameters were explored through both sensitivity and likelihood profile analyses. Maturity parameters were fixed in this assessment, as they were in benchmark assessment [@gertseva_stock_2017]. Maturity schedules are generally estimated outside of the assessment, and the maturity estimates were not updated since the benchmark assessment. These parameters, once updated, may influence estimates of spawning stock output.
+Main life history parameters, such as natural mortality and stock-recruit curve steepness, generally contribute significant uncertainty to stock assessments. These values were fixed in this assessment, as they were in the benchmark assessment because the benchmark model was unable to reliably estimate these quantities [@gertseva_stock_2017]. These quantities are essential for understanding the dynamics of the stock and determining projected rebuilding. Alternative values of these parameters were explored through both sensitivity and likelihood profile analyses. Maturity parameters were fixed in this assessment, as they were in benchmark assessment [@gertseva_stock_2017]. Maturity schedules are generally estimated outside of the assessment, and the maturity parameter estimates were not updated in the time since the benchmark assessment. These parameters, once updated, may influence estimates of spawning stock output.
 
 Although significant progress has been made in reconstructing historical landings, early catches of Yelloweye Rockfish continue to be uncertain.
 
