--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -8,7 +8,7 @@
 <!-- 4. Reference points based on MSY (if estimated) (spawning biomass and/or output, SPR, exploitation rate, equilibrium yield).  -->
 <!-- 5. Equilibrium yield curve showing various BMSY proxies.   -->
 
-This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO40% of unfished spawning output. Both areas are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO40% target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 14.2% of its unfished output in 2000 (@tbl-ts). The same year, the stock was declared overfished. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
+This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% of its unexploited level. This is above the overfished threshold of SO25%, and slightly above the management target of SO40% of unfished spawning output. Both areas (California and Oregon-Washington) are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SO40% target for the first time in 1986 and below the overfished SO25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 15.6% of its unfished output in 2000 (@tbl-ts). The stock was declared overfished in 2002. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
 
 Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1-1,331.9 million eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SO25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419-533 million eggs), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108-137 mt). The model estimate of maximum sustainable yield (MSY) is 128 mt (95% confidence interval: 113-143 mt). The estimated spawning stock output at MSY is 343 million eggs (95% confidence interval: 303-384 million eggs). The exploitation rate corresponding to the estimated SPRMSY of F36% is 0.037.
 
@@ -16,7 +16,7 @@ This assessment estimates that the 2024 SPR is `r (1-(round(mod_out$derived_quan
 
 ## Harvest Projections and Decision Tables
 
-The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% (@tbl-projections). The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y-1), estimated using the maximum age of 123 years. Natural mortality value for high state of nature was calculated to correspond to 97 years of age, which is the 99th percentile of the age data available for the assessment; this value was 0.056 y-1. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish; this value was 0.037 y-1.
+The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% (@tbl-projections). The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y-1), estimated using the maximum age of 123 years. The natural mortality value for the high state of nature was calculated to correspond to 97 years of age, which was the 99th percentile of the age data available for the 2017 assessment (@gertseva_stock_2017); this value was 0.056 y-1. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish at the time of the 2017 assessment (@gertseva_stock_2017); this value was 0.037 y-1.
 
 Twelve-year forecasts for each state of nature were calculated (@tbl-es-decision-2).
 
