--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -69,7 +69,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Annual relative log index of abundance for the Oregon recreational index, including both MRFSS (1980 - 1999) and ORBS (2004 - 2024) indices."
+#| fig-cap: "Annual relative log-scale index of abundance for the Oregon recreational index, including both MRFSS (1980 - 1999) and ORBS (2004 - 2024) indices."
 
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index4_logcpuedata_6_OR_REC.png"
@@ -432,7 +432,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the California MRFSS recreational index."
+#| fig-cap: "Fit to the log-scale California MRFSS recreational index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_3_CA_REC.png"
@@ -444,7 +444,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the Oregon recreational index."
+#| fig-cap: "Fit to the log-scale Oregon recreational index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_6_OR_REC.png"
@@ -456,7 +456,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the Washington recreational index."
+#| fig-cap: "Fit to the log-scale Washington recreational index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_7_WA_REC.png"
@@ -468,7 +468,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the California CPFV observer index."
+#| fig-cap: "Fit to the log-scale California CPFV observer index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_8_CACPFV.png"
@@ -480,7 +480,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the Oregon onboard observer (ORFS) index."
+#| fig-cap: "Fit to the log-scale Oregon onboard observer (ORFS) index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_9_OR_RECOB.png"
@@ -492,7 +492,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the Triennial survey index."
+#| fig-cap: "Fit to the log-scale Triennial survey index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_10_TRI_ORWA.png"
@@ -504,7 +504,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the WCBTS index."
+#| fig-cap: "Fit to the log-scale WCBTS index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_11_NWFSC_ORWA.png"
@@ -516,7 +516,7 @@ knitr::include_graphics(
 #| echo: false
 #| warning: false
 #| eval: true
-#| fig-cap: "Fit to the IPHC survey index."
+#| fig-cap: "Fit to the log-scale IPHC survey index."
 #
 knitr::include_graphics(
     "figures/r4ss_plots/plots/index5_logcpuefit_12_IPHC_ORWA.png"
