--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -12,11 +12,11 @@ This assessment estimates that the stock of Yelloweye Rockfish off the continent
 
 Reference points for the base model are summarized in @tbl-ref-points-es-2. Unfished spawning stock output for Yelloweye Rockfish was estimated to be `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SSB_Virgin")], 3)` million eggs (95% confidence interval: 1,048.1 - 1,331.9 million eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SO25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SO40%), which is estimated by the model to be 476 million eggs (95% confidence interval: 419 - 533 million eggs), which corresponds to an exploitation rate of 0.026. This harvest rate provides an equilibrium yield of 122 mt at SO40% (95% confidence interval: 108 - 137 mt). The model estimate of maximum sustainable yield (MSY) is 128 mt (95% confidence interval: 113 - 143 mt). The estimated spawning stock output at MSY is 343 million eggs (95% confidence interval: 303-384 million eggs). The exploitation rate corresponding to the estimated SPRMSY is 0.037.
 
-This assessment estimates that the 2024 SPR is `r ((((round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SPRratio_2024")], 3)*0.5)-1)*(-1)))*100`% (@fig-time-spr). The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target specified in the current rebuilding plan and used to determine the \gls{acl} is 76% (when the SPR is greater than this value, the exploitation is below the target). Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield curve is shown in @fig-eq-yield.
+This assessment estimates that the 2024 SPR is `r ((((round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="SPRratio_2024")], 3)*0.5)-1)*(-1)))*100`% (@fig-time-spr). The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target specified in the current rebuilding plan and used to determine the \gls{acl} is 76% (when the SPR is greater than this value, the exploitation is below the target). Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget = 0.5) between 1977 and 2000. The equilibrium yield curve is shown in @fig-eq-yield.
 
 ## Harvest Projections and Decision Tables
 
-The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% (@tbl-projections). The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y-1), estimated using the maximum age of 123 years. The natural mortality value for the high state of nature was calculated to correspond to 97 years of age, which was the 99th percentile of the age data available for the 2017 assessment (@gertseva_stock_2017); this value was 0.056 y-1. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish at the time of the 2017 assessment (@gertseva_stock_2017); this value was 0.037 y-1.
+The base model estimate for 2025 spawning depletion is `r round(mod_out$derived_quants$Value[which(mod_out$derived_quants$Label=="Bratio_2025")], 3)*100`% (@tbl-projections). The primary axis of uncertainty about this estimate used in the decision table was based on natural mortality. Natural mortality in the assessment model is fixed at the median of the Hamel prior (0.044 y^-1^), estimated using the maximum age of 123 years. The natural mortality value for the high state of nature was calculated to correspond to 97 years of age, which was the 99th percentile of the age data available for the 2017 assessment (@gertseva_stock_2017); this value was 0.056 y^-1^. The natural mortality value for low state of nature was calculated to correspond to 147 years of age, which is the maximum age reported for the Yelloweye Rockfish at the time of the 2017 assessment (@gertseva_stock_2017); this value was 0.037 y^-1^.
 
 Twelve-year forecasts for each state of nature were calculated (@tbl-es-decision-2).
 
