--- a/report/03_data.qmd
+++ b/report/03_data.qmd
@@ -91,7 +91,7 @@ The Oregon Onboard Observer (now Ocean Recreational Fisheries Survey, or ORFS) i
 
 The unfiltered data set contained 18,410 drifts. Multiple standardized filters are applied to remove outliers and data unsuitable for an index. These filters are very similar to filters applied in 2017 and include removing drifts without data needed for CPUE information, long drifts (above 95th percentile), drifts in deeper waters (more than 64fm, 99th percentile), drifts that were targeting primarily mid-water species, and drifts outside of the legal fishing depth (with a five fathom buffer). Additionally, years with extremely low sample sizes (< 50) were excluded. Finally, drifts on charters from Port Orford were removed due to small sample sizes. The final filtered data set included 6,839 trips with a 6.1% encounter rate for Yelloweye Rockfish (@tbl-yelloweye_percent_pos_ORFS). 
 
-Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP] to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (@tbl-yelloweye_model_selection_ORFS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). The index of abundance is shown in @fig-ORFS_index. A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@fig-ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
+Covariates evaluated included year, month, port, the open depths to fishing (all depths or inside 20/30/40fm), and a five fm-binned depth of drift covariate. This is in contrast to the 2017 index, which was only able to evaluate a year covariate. The covariates listed above are standard to evaluate for this index in other assessments. Negative binomial models were fit using \gls{sdmtmb} version 0.6.0 [@Anderson_2024_SRP] to the drift-level data (catch with a log offset for adjusted angler hours). A model without the open fishing depths or month was selected as the best fit model by AIC (@tbl-yelloweye_model_selection_ORFS). Acceptable diagnostics for the model were achieved, as evidenced by passing the sanity function in \gls{sdmtmb} (@fig-orfs_qqplot). A comparison to the ORFS index used in the previous assessment indicates that despite the change in modeling approach and the covariates included, most years overlap between the two indices and similar trends are observed (@fig-ORFS_comp). The updated index has reduced within-year variance and a lack of extreme swings in the standardized index value (e.g. 2013) relative to the index from 2017.
 
 #### Oregon ORBS Dockside (release only) CPUE, 2004-2024
 
