most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -1446,10 +1446,9 @@ angler hours). A model without the open fishing depths or month was
 selected as the best fit model by AIC
 (Table~\ref{tbl-yelloweye_model_selection_ORFS}). Acceptable diagnostics
 for the model were achieved, as evidenced by passing the sanity function
-in \gls{sdmtmb} (Figure~\ref{fig-orfs_qqplot}). The index of abundance
-is shown in \textbf{?@fig-ORFS\_index}. A comparison to the ORFS index
-used in the previous assessment indicates that despite the change in
-modeling approach and the covariates included, most years overlap
+in \gls{sdmtmb} (Figure~\ref{fig-orfs_qqplot}). A comparison to the ORFS
+index used in the previous assessment indicates that despite the change
+in modeling approach and the covariates included, most years overlap
 between the two indices and similar trends are observed
 (Figure~\ref{fig-ORFS_comp}). The updated index has reduced within-year
 variance and a lack of extreme swings in the standardized index value
@@ -1680,7 +1679,8 @@ estimated \(a = 7.21847\)*10\textsuperscript{-8} and \(b = 4.043\).
 \subsubsection{Natural Mortality}\label{natural-mortality}
 
 The 2025 base model used the 2017 assessment's initial value of natural
-Mortality (\(M = 0.044\)) which was estimated based on Hamel (2015).
+Mortality (\(M = 0.044\)y\textsuperscript{-1}) which was estimated based
+on Hamel (2015).
 
 \subsection{Environmental and ecosystem
 data}\label{environmental-and-ecosystem-data}
@@ -2277,9 +2277,9 @@ current rebuilding plan and used to determine the \gls{acl} is 76\%
 target). Relative exploitation rates (calculated as catch/biomass of
 age-8 and older fish) are estimated to have been below 1\% during the
 last decade. This assessment estimates that Yelloweye Rockfish was
-fished beyond the relative SPR ratio (calculated as
-1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield
-curve is shown in Figure~\ref{fig-eq-yield}.
+fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget =
+0.5) between 1977 and 2000. The equilibrium yield curve is shown in
+Figure~\ref{fig-eq-yield}.
 
 \subsection{Harvest Projections and Decision
 Tables}\label{harvest-projections-and-decision-tables}
@@ -2288,14 +2288,15 @@ The base model estimate for 2025 spawning depletion is 40.1\%
 (Table~\ref{tbl-projections}). The primary axis of uncertainty about
 this estimate used in the decision table was based on natural mortality.
 Natural mortality in the assessment model is fixed at the median of the
-Hamel prior (0.044 y-1), estimated using the maximum age of 123 years.
-The natural mortality value for the high state of nature was calculated
-to correspond to 97 years of age, which was the 99th percentile of the
-age data available for the 2017 assessment (Gertseva and Cope (2017));
-this value was 0.056 y-1. The natural mortality value for low state of
-nature was calculated to correspond to 147 years of age, which is the
-maximum age reported for the Yelloweye Rockfish at the time of the 2017
-assessment (Gertseva and Cope (2017)); this value was 0.037 y-1.
+Hamel prior (0.044 y\textsuperscript{-1}), estimated using the maximum
+age of 123 years. The natural mortality value for the high state of
+nature was calculated to correspond to 97 years of age, which was the
+99th percentile of the age data available for the 2017 assessment
+(Gertseva and Cope (2017)); this value was 0.056 y\textsuperscript{-1}.
+The natural mortality value for low state of nature was calculated to
+correspond to 147 years of age, which is the maximum age reported for
+the Yelloweye Rockfish at the time of the 2017 assessment (Gertseva and
+Cope (2017)); this value was 0.037 y\textsuperscript{-1}.
 
 Twelve-year forecasts for each state of nature were calculated
 (Table~\ref{tbl-es-decision-2}).
@@ -2348,7 +2349,7 @@ population:
 The authors would like to thank the other members of the University of
 Washington FSH 577 class, particularly those on the Yelloweye Rockfish
 team (Emily Branam, Julia Coates, Kimberly Fitzpatrick, Madison
-Sandquist, Olivia Boisen and Rachel Brooks). The authors also thank all
+Sandquist, Olivia Boisen, and Rachel Brooks). The authors also thank all
 data providers.
 
 \newpage{}
