most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -1495,13 +1495,15 @@ port, boat type and open fishery depths, which was the best fit model by
 AIC in this series (Table~\ref{tbl-yelloweye_model_selection_ORBS}).
 Acceptable diagnostics for the model were achieved, as evidenced by
 passing the sanity function in \gls{sdmtmb} (Figure~\ref{fig-orbs_qq}).
-ODFW no longer maintains the deltaGLM code that was used to develop the
-2017 index and so the index was updated to use the currently accepted
-modeling approach for \gls{pfmc} groundfish assessments (\gls{sdmtmb},
-version 0.6.0) (Anderson et al. 2024). To bridge this change, the 2017
-model index structure was applied to the current data set using
-\gls{sdmtmb} and compared to the deltaGLM index used in the 2017
-assessment and the current recommended updated index in
+The index of abundance for the Oregon recreational fleet, including both
+MRFSS (1980 - 1999) and ORBS (2004 - 2024) indices is shown in
+Figure~\ref{fig-ORBS_index}. ODFW no longer maintains the deltaGLM code
+that was used to develop the 2017 index and so the index was updated to
+use the currently accepted modeling approach for \gls{pfmc} groundfish
+assessments (\gls{sdmtmb}, version 0.6.0) (Anderson et al. 2024). To
+bridge this change, the 2017 model index structure was applied to the
+current data set using \gls{sdmtmb} and compared to the deltaGLM index
+used in the 2017 assessment and the current recommended updated index in
 Figure~\ref{fig-ORBS_comp}. There are some differences observed in 2005
 -- 2009 between the deltaGLM index and the two \gls{sdmtmb} indices;
 however, this appears to be largely driven by the updated modeling
