--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -1496,7 +1496,7 @@ AIC in this series (Table~\ref{tbl-yelloweye_model_selection_ORBS}).
 Acceptable diagnostics for the model were achieved, as evidenced by
 passing the sanity function in \gls{sdmtmb} (Figure~\ref{fig-orbs_qq}).
 The index of abundance for the Oregon recreational fleet, including both
-MRFSS (1980 - 1999) and ORBS (2004 - 2024) indices is shown in
+\gls{mrfss} (1980 - 1999) and ORBS (2004 - 2024) indices is shown in
 Figure~\ref{fig-ORBS_index}. ODFW no longer maintains the deltaGLM code
 that was used to develop the 2017 index and so the index was updated to
 use the currently accepted modeling approach for \gls{pfmc} groundfish
